Language Locale Support Fixed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  generate: true
   uses-material-design: true
 
-flutter_intl:
-  enabled: true
-  main_locale: en
-  class_name: S
